# personal-assistant

./: .env.example  .gitignore  CLAUDE.md.example  Dockerfile  LICENSE  README.md  RUN_TESTS.md  TEST_SUMMARY.md  docker-compose.yml  gen_token.py  package-lock.json  pyproject.toml  pytest.ini
.github/architecture/: 001-atlas-mvp.md
.github/issues/: 001-personal-assistant-atlas.md
atlas/: config.py  conversation.py  errors.py  main.py  orchestrator.py
atlas/api/: dashboard.py
atlas/intent/: classifier.py  schemas.py
atlas/memory/: context.py  extractor.py  retriever.py  store.py
atlas/persona/: atlas.py
atlas/proactive/: config.py  email_cleaner.py  insight_store.py  insights.py  scheduler.py  schemas.py
atlas/proactive/analyzers/: __init__.py  correlations.py  habits.py  sleep.py
atlas/services/: gmail.py  google_auth.py  google_calendar.py  openai_client.py
atlas/tools/: briefing.py  calendar.py  email.py  habits.py  obsidian.py  search.py  shopping.py  vault_ops.py
docs/: PRODUCT-ON-RAILS.md  apis.md  business-rules.md  features.md  index.md  integrations.md  patterns.md  stack.md
docs/specs/: index.md
docs/specs/business/: COMMUNICATION_GUIDELINES.md  COMPETITIVE_LANDSCAPE.md  PERSONALITY_DESIGN.md  PRODUCT_METRICS.md  (+4 more)
docs/technical/: personal-assistant.md
mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json
mobile/plugins/: withCleartextTraffic.js
tests/: README.md  __init__.py  conftest.py  test_api.py  test_orchestrator.py  test_schemas.py  test_slugify.py  test_templates.py  test_tools.py  test_vault_manager.py
(+52 files in other folders)
